--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,16 @@
 .painting {
+  max-width: 40rem;
+  max-height: 40rem;
+}
 
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  height: 100vh;
+  width: 100%;
 }
 
 .cell {
@@ -9,10 +20,6 @@
   margin: 0;
   padding: 0;
   flex-grow: 1;
-}
-
-.colors {
-
 }
 
 .row,
@@ -31,4 +38,28 @@
 .col {
   flex-grow: 1;
   flex-direction: column;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.colors {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.color {
+  margin: 0.1rem;
+  padding: 0;
+  outline: 0.1rem solid black;
+  border-radius: 50%;
 }
