--- a/src/styles.css
+++ b/src/styles.css
@@ -54,7 +54,18 @@
 
 .colors {
   display: flex;
-  gap: 0.5rem;
+  gap: 2vw;
+  max-width: 35rem;
+  justify-content: center;
+}
+
+@media screen and (min-width: 50rem) {
+  .colors {
+    gap: 1rem;
+  }
+  .color svg {
+    padding: 0.5rem !important;
+  }
 }
 
 .color {
@@ -63,4 +74,14 @@
   outline: 0.1rem solid black;
   border-radius: 50%;
   cursor: pointer;
+  min-width: 1rem;
+  min-height: 1rem;
+  max-width: 3rem;
+  max-height: 3rem;
+
+  svg {
+    padding: 1vw;
+    width: 100%;
+    height: 100%;
+  }
 }
