--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 .painting {
   max-width: 40rem;
   max-height: 40rem;
+  min-width: 20rem;
+  min-height: 20rem;
 }
 
 .App {
@@ -11,6 +13,8 @@
   gap: 1rem;
   height: 100vh;
   width: 100%;
+  min-height: 25rem;
+  min-width: 10rem;
 }
 
 .cell {
@@ -74,6 +78,7 @@
   outline: 0.1rem solid black;
   border-radius: 50%;
   cursor: pointer;
+  align-self: center;
   min-width: 1rem;
   min-height: 1rem;
   max-width: 3rem;
