--- a/src/styles.css
+++ b/src/styles.css
@@ -84,6 +84,12 @@ body {
   justify-content: center;
 }
 
+.qr-container {
+  display: flex;
+  width: 100%;
+  justify-content: start;
+}
+
 @media screen and (min-width: 50rem) {
   .colors {
     gap: 1rem;
