--- a/src/styles.css
+++ b/src/styles.css
@@ -93,6 +93,15 @@ body {
   justify-content: start;
 }
 
+select {
+  font-size: 14pt;
+  padding: 0 2em;
+  text-align: start;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #dddddd;
+}
+
 @media screen and (min-width: 50rem) {
   .colors {
     gap: 1rem;
