--- a/src/components/MultisynqQRCode/styles.css
+++ b/src/components/MultisynqQRCode/styles.css
@@ -1,10 +1,10 @@
 @media (max-width: 500px) {
-  .croquet-qr-container {
+  .multisynq-qr-container {
     position: relative !important;
   }
 }
 
-.croquet-qr-container {
+.multisynq-qr-container {
   position: fixed;
   bottom: 0px;
   left: 0px;
@@ -15,12 +15,12 @@
   transition: width 0.2s, padding 0.2s;
 }
 
-.croquet-qr-container .top-bar {
+.multisynq-qr-container .top-bar {
   display: flex;
   justify-content: flex-end;
 }
 
-.croquet-qr-container .top-bar > * {
+.multisynq-qr-container .top-bar > * {
   border: 0.2rem solid black;
   border-top: none;
   border-right: none;
@@ -29,18 +29,18 @@
   stroke-width: 0.05rem;
 }
 
-.croquet-qr-container .qr {
+.multisynq-qr-container .qr {
   display: flex;
   cursor: pointer;
 }
 
-.croquet-qr-container .qr svg {
+.multisynq-qr-container .qr svg {
   aspect-ratio: 1;
   width: 100%;
   height: auto;
 }
 
-.croquet-qr-container .bottom-bar {
+.multisynq-qr-container .bottom-bar {
   padding: 0.5rem;
   padding-top: 0;
   display: flex;
@@ -48,14 +48,14 @@
   align-items: center;
 }
 
-.croquet-qr-container .bottom-bar .url {
+.multisynq-qr-container .bottom-bar .url {
   flex-grow: 1;
   overflow-x: scroll;
   white-space: nowrap;
   padding: 0.5rem;
 }
 
-.croquet-qr-container .button {
+.multisynq-qr-container .button {
   padding: 5px;
   border-radius: 5px;
   border: 1px solid gray;
